feat(package.json): add typecheck script to ensure type safety during development fix(main.ts): correct regex for price parsing to handle commas properly in the input string

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"start:prod": "node dist/main.js",
 		"start:dev": "tsx src/main.ts",
 		"build": "tsc",
+        "typecheck": "tsc --noEmit",
 		"lint": "eslint",
 		"lint:fix": "eslint --fix",
 		"format": "prettier --write .",
